a9.networkinterface.tf
resource "azurerm_network_interface" "web_linuxvm_nic" {
   name                = "${var.web_subnet_name}-web-linuxvm-nic"
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name

  ip_configuration {
    name                          = "internal"
    subnet_id                     = azurerm_subnet.websubnet.id 
    private_ip_address_allocation = "Dynamic"
   # public_ip_address_id = azurerm_public_ip.example.id
  }
}
